# mymonitor

./: Cargo.toml  README.md  build.sh  build11.sh  install.sh  mymonitor-rpi3b  mymonitor-rpi3b-0.0.12  mymonitor-rpi3b-0.0.2  mymonitor-rpi3b-0.0.4  mymonitor-rpi3b-0.1.2  mymonitor-rpi3b-0.1.4  mymonitor-rpi3b-0.1.5  mymonitor-rpi4  mymonitor-rpi4-0.0.12  mymonitor-rpi4-0.0.2  mymonitor-rpi4-0.0.4  mymonitor-rpi4-0.1.2  mymonitor-rpi4-0.1.4  mymonitorrpi3.service  mymonitorrpi4.service
src/: main.rs
src/alerting/: handler.rs  mod.rs  rules.rs
src/metrics/: cpu.rs  cpu_temp.rs  disk.rs  memory.rs  mod.rs  network.rs  snapshot.rs
src/stream/: ws_server.rs
src/ui/: cpu_widget.rs  dashboard.rs  disk_usage_widget.rs  disk_widget.rs  memory_widget.rs  mod.rs  net_widget.rs  theme.rs
