[package]
name = "mymonitor"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.35.1"
crossterm = "0.29.0"
ratatui = "0.29.0"
serde_json = "1.0"
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tokio-tungstenite = "0.23"

